List View: fix expand and collapsing when the icon is clicked

--- a/packages/block-editor/src/components/list-view/style.scss
+++ b/packages/block-editor/src/components/list-view/style.scss
@@ -107,6 +107,7 @@
 			border-radius: inherit;
 			box-shadow: inset 0 0 0 var(--wp-admin-border-width-focus) var(--wp-admin-theme-color);
 			z-index: 1;
+			pointer-events: none;
 
 			// Hide focus styles while a user is dragging blocks/files etc.
 			.is-dragging-components-draggable & {
